# webcomponents

./: .gitignore  Cargo.toml  README.md  justfile
crates/lib/web_runner/: Cargo.toml
crates/lib/web_runner/src/: axum_app_error.rs  axum_server.rs  layout.rs  lib.rs
crates/lib/web_runner/templates/: layout.html
crates/lib/webcomponents/: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js
crates/lib/webcomponents/assets/css/: base.css
crates/lib/webcomponents/src/: calendar.rs  demo.rs  lib.rs
crates/lib/webcomponents/templates/: calendar.html  demo.html
