[workspace]
resolver = "2"
members = ["crates/bin/serve", "crates/lib/web_runner","crates/lib/webcomponents"]

[profile.dev]
debug = false       # this has been turned off to improve compilation performance. Re-enable this for debug symbols, for instance for stack traces, disabled for shorting build duration, increases build duration when enabled

[workspace.dependencies]
anyhow = { version="1.0" }
askama = "0.12"
axum = {version="0.7", features=[]}
tracing = "0.1"
tokio = { version = "1.40", default-features= false, features = ["tracing", "net", "rt-multi-thread" ] }
